tests/js_error/source_locations/destructure/object/to_property_key_rest.js
var poisoned = { toString() { throw new Error() } };

var { [poisoned]: a, ...b } = {};